spacing bug fixed

--- a/app/Sections/home/Achievement/Achievement.scss
+++ b/app/Sections/home/Achievement/Achievement.scss
@@ -2,7 +2,7 @@
 
 .achievementSec {
     position: relative;
-    margin-top: 80px;
+    margin-top: 40px;
     display: flex;
 
 
